[package]
name = "utf8-io"
version = "0.12.0"
description = "Traits and types for UTF-8 I/O"
authors = ["Dan Gohman <dev@sunfishcode.online>"]
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
keywords = ["stream", "text"]
categories = ["os", "text-processing"]
repository = "https://github.com/sunfishcode/utf8-io"
edition = "2018"
exclude = ["/.github"]

[dependencies]
duplex = "0.12.0"
layered-io = { version = "0.13.0", optional = true }
terminal-io = { version = "0.13.0", optional = true }
io-extras = "0.14.0"
io-lifetimes = { version = "0.6.0", default-features = false }

[dev-dependencies]
anyhow = "1.0.37"
layered-io = "0.13.0"

[badges]
maintenance = { status = "actively-developed" }
